ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nodejs-ingress

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-service
            port:
              number: 80
